--- a/index.html
+++ b/index.html
@@ -1,8 +1,21 @@
 <html>
   <head>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
+    <style>
+
+      body {
+        background: #222;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      #canvas {
+        box-shadow: 3px 3px 100px #000
+      }
+      
+      </style>
   </head>
   <body>
-    <canvas id="canvas" height="400" width="400" />
+    <canvas id="canvas" width="960" height="540" />
   </body>
 </html>
